--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
             <title>
                 CSS selectors
             </title>
-            <link rel="stylesheet" href="./5.3 CSS Selectors/style.css" />
+            <link rel="stylesheet" href="./style.css" />
         </head>
 
         <body>
